[package]
name = "torrex-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.3.0"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { workspace = true }
torrex-lib = { path = "../torrex-lib" }
uuid ={ version = "1.17.0", features = ["v4"] }


